examples/negative/type_name_collision/prelude_collision.kai
# Negative fixture (#518): user-declared `type Gadget` collides
# with `pub type Gadget` provided by a `--prelude` file. Mirrors
# the import case (`import_collision/`), but exercises the
# prelude code path: `prelude_collision.prelude.kai` is auto-
# loaded by `tools/test-negative.sh` when the sibling file is
# present. The diagnostic distinguishes prelude vs import in
# the help text.

type Gadget = Leaf | Node(Int)

fn main() : Int = 0
